syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.user";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "api/user.proto";

service UserService {
    rpc LoadUsers (RequestLoadUsers) returns (ResponseLoadUsers);
}

message RequestLoadUsers {
    repeated int32 user_ids = 1;
}

message ResponseLoadUsers {
    repeated im.ghasedak.api.UserProfile profiles = 1;
}
